# JuneLang

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notes.txt
cmake/: AddCatch2.cmake  AddGLFW_GLM.cmake
editor/: CMakeLists.txt  Component.cpp  Component.hpp  Context.cpp  Context.hpp  DirectoryViewer.cpp  DirectoryViewer.hpp  EditComponent.cpp  EditComponent.hpp  Editor.cpp  Editor.hpp  FileExplorer.cpp  FileExplorer.hpp  FileHandler.cpp  FileHandler.hpp  Font.cpp  Font.hpp  FontLoader.cpp  FontLoader.hpp  MainComponent.cpp  MainComponent.hpp  Rectangle.cpp  Rectangle.hpp  ScrollableComponent.cpp  ScrollableComponent.hpp  Shader.cpp  Shader.hpp  TextData.cpp  TextData.hpp  TextRender.cpp  TextRender.hpp  Timer.cpp  Timer.hpp  glad.c  utils.hpp
examples/: C.june  EList.jun  HelloWorld.june  Malloc.june  Sorting.june  if.june  inc.jun  test.jun  test.june
include/: Token.hpp  ft2build.h
include/glad/: glad.h
res/shaders/: text.frag  text.vert
src/: Arena.cpp  Arena.hpp  ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  Callable.cpp  Callable.hpp  CodeGenerator.cpp  CodeGenerator.hpp  DebugArena.cpp  DebugArena.hpp  Environment.cpp  Environment.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Expr.hpp  GarbageCollector.cpp  GarbageCollector.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  MemoryPool.cpp  MemoryPool.hpp  NativeFunctions.cpp  NativeFunctions.hpp  Parser.cpp  Parser.hpp  Ref.hpp  Resolver.cpp  Resolver.hpp  Stmt.hpp  StreamHandler.cpp  StreamHandler.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp
src/codegen/: Chunk.cpp  Chunk.hpp  CodeGenerator.cpp
src/compiler/: CFFI.cpp  CFFI.hpp  Chunk.cpp  Chunk.hpp  CodeGenerator.cpp  CodeGenerator.hpp  DataSection.cpp  DataSection.hpp  FlatVM.cpp  FlatVM.hpp  Flatten.cpp  Flatten.hpp  Ir.cpp  Ir.hpp  JValue.hpp  OpCode.cpp  OpCode.hpp  Operand.cpp  Operand.hpp  StaticAddressPass.cpp  StaticAddressPass.hpp  TypeTable.cpp  TypeTable.hpp  Utils.hpp  VM.cpp  VM.hpp  VariableManager.cpp  VariableManager.hpp
src/frontend/: Expr.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Resolver.cpp  Resolver.hpp  Stmt.hpp  Token.cpp  Token.hpp  TypeInfo.hpp  Value.cpp  Value.hpp
src/interpreter/: Environment.cpp  Environment.hpp  Interpreter.cpp  Interpreter.hpp  NativeFunctions.cpp  NativeFunctions.hpp
src/memory/: Arena.hpp  DebugArena.hpp  GarbageCollector.hpp  MemoryPool.cpp  MemoryPool.hpp
tests/: CMakeLists.txt  TestInterpreter.cpp  TestLexer.cpp  TestMain.cpp  TestParser.cpp
tests/codegen/: TestBasicExpr.cpp  TestCodeExec.cpp  TestCompilation.cpp  TestFailing.cpp
tests/interpreter/: TestInterpreter.cpp  TestLexer.cpp  TestMain.cpp  TestParser.cpp
tests/scripts/: lexer_test.jun  lexer_test_1.jun  lexer_test_2.jun  lexer_test_3.jun  parser_test_1.jun
