add_library(JuneInterpreter
    Value.cpp
    Token.cpp
    Lexer.cpp
    ErrorHandler.cpp
    Parser.cpp
    Interpreter.cpp
    Environment.cpp
    Callable.cpp
    Resolver.cpp
    StreamHandler.cpp
    memory/Arena.cpp
    NativeFunctions.cpp
    memory/MemoryPool.cpp
    memory/GarbageCollector.cpp
    memory/DebugArena.cpp
    compiler/CodeGenerator.cpp
    compiler/Chunk.cpp
    compiler/OpCode.cpp
)

target_include_directories(JuneInterpreter 
    PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
    memory
    compiler
)