add_library(JuneInterpreter
    Value.cpp
    Token.cpp
    Lexer.cpp
    ErrorHandler.cpp
    Parser.cpp
    Callable.cpp
    Resolver.cpp
    interpreter/Interpreter.cpp
    interpreter/Environment.cpp
    interpreter/NativeFunctions.cpp
    StreamHandler.cpp
    memory/Arena.cpp
    memory/MemoryPool.cpp
    memory/GarbageCollector.cpp
    memory/DebugArena.cpp
    compiler/CodeGenerator.cpp
    compiler/Chunk.cpp
    compiler/OpCode.cpp
    compiler/VM.cpp
)

target_link_libraries(
    JuneInterpreter
    stdc++exp
)

target_include_directories(JuneInterpreter 
    PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
    memory
    compiler
    interpreter
)