add_library(JuneInterpreter
    frontend/Value.cpp
    frontend/Token.cpp
    frontend/Lexer.cpp
    frontend/ErrorHandler.cpp
    frontend/Parser.cpp
    frontend/Callable.cpp
    frontend/Resolver.cpp
    frontend/StreamHandler.cpp
    interpreter/Interpreter.cpp
    interpreter/Environment.cpp
    interpreter/NativeFunctions.cpp
    memory/Arena.cpp
    memory/MemoryPool.cpp
    memory/GarbageCollector.cpp
    memory/DebugArena.cpp
    compiler/CodeGenerator.cpp
    compiler/Chunk.cpp
    compiler/OpCode.cpp
    compiler/VM.cpp
    compiler/Ir.cpp
    compiler/Operand.cpp
    compiler/VariableManager.cpp
    compiler/Flatten.cpp
    compiler/DataSection.cpp
)

target_link_libraries(
    JuneInterpreter
    stdc++exp
)

target_include_directories(JuneInterpreter
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    memory
    compiler
    interpreter
    frontend
)
